--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,19 +1,14 @@
 .form {
-    margin-left: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 20em;
+    border: 1px solid;
+    margin: 0 auto;
+    padding: 10px 0;
 }
 
 .formError {
     font-style: italic;
     color: red;
-}
-
-.button {
-    border: none;
-    border-radius: 5px;
-    color: snow;
-    background: firebrick;
-    padding: 8px 14px;
-    font-weight: bold;
-    margin-top: 10px;
-    cursor: pointer;
 }
